add custom url helpers

--- a/app/views/application/_announcement_banner.html.erb
+++ b/app/views/application/_announcement_banner.html.erb
@@ -7,12 +7,12 @@
     <div class="announcement_info">
       <h3>We&#8217;re Hiring</h3>
 
-        <p>As we continue to support the efforts of the amazing Chefs in the community, we plan to hire additional engineers to help continue the progress we have already made. These engineers will work closely with the community and help shape the direction of Supermarket. If you want to come work with amazing coworkers and a vibrant community, please take a look at our job postings for a <a href="http://www.getchef.com/careers/om5bZfwl/">Software Development Engineer</a> and a <a href="http://www.getchef.com/careers/o2abZfw6/">User Experience Engineer</a>.</p>
+      <p>As we continue to support the efforts of the amazing Chefs in the community, we plan to hire additional engineers to help continue the progress we have already made. These engineers will work closely with the community and help shape the direction of Supermarket. If you want to come work with amazing coworkers and a vibrant community, please take a look at our job postings for a <%= link_to 'Software Development Engineer', chef_www_url('careers/om5bZfwl') %> and a <%= link_to 'User Experience Engineer', chef_www_url('careers/o2abZfw6') %>.</p>
     </div>
     <div class="announcement_info">
       <h3>Giveaways and Prizes</h3>
 
-      <p>What would grand opening be without a giveaway? In keeping with the supermarket theme, we are giving away a t-shirt to everyone that completes the <a href="http://evocalize.com/consumer/rs/chef/supermarket">survey</a> about Supermarket by 2014&#8211;08&#8211;08 23:59:59 UTC. But why stop there? We will be randomly selecting two of the people who complete the survey to each win free registration to the <a href="http://www.getchef.com/blog/event/chef-community-summit/">Chef Community Summit, October 2nd and 3rd, 2014</a>.</p>
+      <p>What would grand opening be without a giveaway? In keeping with the supermarket theme, we are giving away a t-shirt to everyone that completes the <a href="http://evocalize.com/consumer/rs/chef/supermarket">survey</a> about Supermarket by 2014&#8211;08&#8211;08 23:59:59 UTC. But why stop there? We will be randomly selecting two of the people who complete the survey to each win free registration to the <%= link_to 'Chef Community Summit, October 2nd and 3rd, 2014.', chef_blog_url('event/chef-community-summit') %></p>
     </div>
     <div class="announcement_info">
       <h3>Supermarket Belongs to the Community</h3>
