--- a/app/views/icla_signatures/new.html.erb
+++ b/app/views/icla_signatures/new.html.erb
@@ -4,7 +4,7 @@
   <h1>Individual Contributor License Agreement <small>(ICLA)</small></h1>
 
   <p>
-    You have been asked to sign an ICLA as part of the <%= link_to 'Community Contribution process', 'http://docs.opscode.com/community_contributions.html', target: :blank %>. Please read the document below and complete the form to file your ICLA you may also view a printable copy <%= link_to 'here', agreement_icla_signatures_path, target: 'blank' %>.
+    You have been asked to sign an ICLA as part of the <%= link_to 'Community Contribution process', chef_docs_url('community_contributions.html'), target: :blank %>. Please read the document below and complete the form to file your ICLA you may also view a printable copy <%= link_to 'here', agreement_icla_signatures_path, target: 'blank' %>.
   </p>
 
   <div class="signature">
