--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -51,7 +51,7 @@
         <li>Share your cookbook with <code>knife cookbook site share COOKBOOK_NAME CATEGORY (options)</code></li>
       </ol>
 
-      <p><a href="http://docs.opscode.com/knife_cookbook_site.html#share" target="_blank">Read the full share docs.</a></p>
+      <p><%= link_to 'Read the full share docs.', chef_docs_url('knife_cookbook_site.html#share'), target: '_blank' %></p>
     <% end %>
 
     <h3>Cookbooks You Collaborate On</h3>
@@ -84,7 +84,7 @@
       <li><%= link_to 'View botbot IRC Logs', 'https://botbot.me/freenode/chef', target: 'blank' %></li>
       <li><%= link_to 'Getting Started with Chef and Cookbooks', 'https://wiki.opscode.com/display/ChefCN/Creating+New+Cookbooks', target: 'blank' %></li>
       <li><%= link_to 'Join the Mailing List', 'https://groups.google.com/forum/#!forum/chef-supermarket', target: 'blank' %></li>
-      <li><%= link_to 'Read the Docs', 'http://docs.opscode.com', target: 'blank' %></li>
+      <li><%= link_to 'Read the Docs', chef_docs_url, target: 'blank' %></li>
       <li><%= link_to 'Contribute to Supermarket', 'https://github.com/opscode/supermarket', target: 'blank' %></li>
     </ul>
   </div>
