--- a/app/views/profile/edit.html.erb
+++ b/app/views/profile/edit.html.erb
@@ -22,7 +22,7 @@
         <%= form_for(prep_email_preferences(current_user), url: profile_path, html: { 'data-abide' => true }) do |f| %>
           <%= render 'application/form_errors', record: current_user %>
 
-          <p>Your email, password and name are maintained and managed by your Chef account. <%= link_to 'Edit them here.', ENV['CHEF_PROFILE_URL'] %> They will be updated the next time you sign in to Supermarket. Avatars are powered by <%= link_to 'Gravatar', 'https://www.gravatar.com' %>.</p>
+          <p>Your email, password and name are maintained and managed by your Chef account. <%= link_to 'Edit them here.', chef_profile_url %> They will be updated the next time you sign in to Supermarket. Avatars are powered by <%= link_to 'Gravatar', 'https://www.gravatar.com' %>.</p>
 
           <fieldset>
             <div class="company-field">
