--- a/app/views/tools/_manage_tool.html.erb
+++ b/app/views/tools/_manage_tool.html.erb
@@ -19,5 +19,7 @@
     </li>
   <% end %>
 
+  <%= link_to_adoption(tool) %>
+
   <%= render 'resources/add_collaborator_menu_item', resource: tool %>
 </ul>
