--- a/app/views/tools/_form.html.erb
+++ b/app/views/tools/_form.html.erb
@@ -17,6 +17,7 @@
     <% Tool::ALLOWED_TYPES.each_with_index do |type, index| %>
       <%= f.radio_button :type, type, index == 0 ? { checked: true } : {} %>
       <label for="tool_type_<%= type %>"><%= type.titleize %></label>
+      <% if (index + 1) % 4 == 0 %> <br/> <% end %>
     <% end %>
   </div>
 
