ensuring the filter menu doesn't disappear

--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -33,5 +33,6 @@
     <div class="no-results">
       <p>Sorry, no tools match this criteria. <%= link_to 'View all tools', tools_path %>.</p>
     </div>
+    <div id="extra-spacing"></div>
   <% end %>
 </div>
