--- a/app/views/cookbooks/index.html.erb
+++ b/app/views/cookbooks/index.html.erb
@@ -14,6 +14,7 @@
       <span>Sort by</span>
       <%= link_to_sorted_cookbooks 'Most Downloaded', 'most_downloaded' %>
       <%= link_to_sorted_cookbooks 'Most Followed', 'most_followed' %>
+      <%= link_to_sorted_cookbooks 'Recently Updated', 'recently_updated' %>
     </div>
   </div>
 
