--- a/app/views/application/_appheader.html.erb
+++ b/app/views/application/_appheader.html.erb
@@ -1,7 +1,7 @@
 <nav class="appnav">
   <ul class="mainnav">
     <li><%= link_to 'Cookbooks', cookbooks_directory_path, 'data-hover' => 'Cookbooks', :rel => 'cookbooks' %></li>
-    <% if ROLLOUT.active?(:cla) && ROLLOUT.active?(:github) %>
+    <% if ROLLOUT.active?(:cla) %>
       <li><%= link_to 'Contributors', contributors_path, 'data-hover' => 'Contributors', :rel => 'contributors' %></li>
     <% end %>
     <% if ROLLOUT.active?(:tools) %>
