--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,6 +65,7 @@
         </div>
         <footer class="footer">
           &copy; 2008&thinsp;&ndash;&thinsp;<%= Time.new.year %> Chef Software, Inc. All Rights Reserved.
+          <br><br><%= link_to 'Code of Conduct', chef_docs_url('community_guidelines.html') %>
         </footer>
 
         <a class="exit-off-canvas"></a>
