Remove old Wiki links and redirect to sensible replacement content.

--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -51,7 +51,7 @@
       <h2>Share</h2>
       <ul>
         <li>
-          <a href="https://wiki.opscode.com/display/ChefCN/Creating+New+Cookbooks" target="_blank">Share your cookbooks</a>
+          <a href="http://docs.chef.io/knife_cookbook_site.html#share" target="_blank">Share your cookbooks</a>
         </li>
         <li>
           <a href="irc://irc.freenode.net/chef">Chat on IRC at #chef on irc.freenode.net</a>
