Addressed code review comments.

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -80,7 +80,7 @@
 
     <h4>Resources</h4>
     <ul class="pretty">
-      <li><%= link_to 'Learn Chef', 'https://learnchef.com', target: 'blank' %></li>
+      <li><%= link_to 'Learn Chef', learn_chef_url, target: 'blank' %></li>
       <li><%= link_to 'Join IRC', 'irc://irc.freenode.net/chef' %></li>
       <li><%= link_to 'View botbot IRC Logs', 'https://botbot.me/freenode/chef', target: 'blank' %></li>
       <li><%= link_to 'Join the Mailing List', 'https://groups.google.com/forum/#!forum/chef-supermarket', target: 'blank' %></li>
