Fix incorrect training URL. Fixes #963

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
             <li><%= link_to 'Get Chef', chef_www_url, target: '_blank' %></li>
             <li><%= link_to 'Learn Chef', learn_chef_url, target: '_blank' %></li>
             <li><%= link_to 'Docs', chef_docs_url, target: '_blank' %></li>
-            <li><%= link_to 'Training', "#{chef_domain}/training", target: '_blank' %></li>
+            <li><%= link_to 'Training', chef_training_url, target: '_blank' %></li>
             <li><%= link_to 'Botbot IRC Logs', 'https://botbot.me/freenode/chef', target: '_blank' %></li>
           </ul>
         </aside>
