--- a/app/views/contributors/become_a_contributor.html.erb
+++ b/app/views/contributors/become_a_contributor.html.erb
@@ -5,7 +5,7 @@
   <div class="main" data-equalizer-watch>
     <h1>Become a Contributor</h1>
 
-    <p>In order to become a contributor to Chef Software, Inc.'s open source projects, you must sign the Contributor License Agreement (CLA). The CLA comes in two different varieties - one for individuals (ICLA) and one for corporations (CCLA). The ICLA and CCLA makes everyone's rights clear. Read more about the CLA in the <a href="https://github.com/opscode/chef/blob/master/CONTRIBUTING.md#contributor-license-agreement-cla" target="_blank">opscode/chef CONTRIBUTING.md</a> document.</p>
+    <p>In order to become a contributor to Chef Software, Inc.'s open source projects, you must sign the Contributor License Agreement (CLA). The CLA comes in two different varieties - one for individuals (ICLA) and one for corporations (CCLA). The ICLA and CCLA makes everyone's rights clear. Read more about the CLA in the <a href="https://github.com/chef/chef/blob/master/CONTRIBUTING.md#contributor-license-agreement-cla" target="_blank">chef/chef CONTRIBUTING.md</a> document.</p>
 
     <p>Before signing a CLA, <%= link_to "you must link your GitHub account", link_github_profile_path %> to your Supermarket account. Supermarket uses GitHub's API to check if the authors of commits in a pull request are authorized to contribute to the project. If there are any commit authors in a pull request that have not signed an ICLA or are not a member of a company that has signed the CCLA, the supermarket-chef GitHub user will comment on the pull request letting the users know they need to sign a CLA. If all commit authors are authorized to contribute, it will add a "Signed CLA" label to the issue.</p>
 
