--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -85,7 +85,7 @@
       <li><%= link_to 'View botbot IRC Logs', 'https://botbot.me/freenode/chef', target: 'blank' %></li>
       <li><%= link_to 'Join the Mailing List', 'https://groups.google.com/forum/#!forum/chef-supermarket', target: 'blank' %></li>
       <li><%= link_to 'Read the Docs', chef_docs_url, target: 'blank' %></li>
-      <li><%= link_to 'Contribute to Supermarket', 'https://github.com/opscode/supermarket', target: 'blank' %></li>
+      <li><%= link_to 'Contribute to Supermarket', 'https://github.com/chef/supermarket', target: 'blank' %></li>
     </ul>
   </div>
 </div>
