--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -60,7 +60,7 @@
           <a href="https://groups.google.com/forum/#!forum/chef-supermarket" target="_blank">Join the Supermarket Mailing List</a>
         </li>
         <li>
-          <a href="https://github.com/opscode/supermarket" target="_blank">Contribute to Supermarket</a>
+          <a href="https://github.com/chef/supermarket" target="_blank">Contribute to Supermarket</a>
         </li>
       </ul>
     </div>
