--- a/app/views/cookbooks/directory.html.erb
+++ b/app/views/cookbooks/directory.html.erb
@@ -119,7 +119,7 @@
         </li>
 
         <li>
-          <a href="https://github.com/opscode-cookbooks">Cookbooks maintained and supported by Chef Software, Inc.</a>
+          <a href="https://github.com/chef-cookbooks">Cookbooks maintained and supported by Chef Software, Inc.</a>
         </li>
       </ul>
     </div>
