Update Chef's office address.

--- a/app/views/layouts/mailer.text.erb
+++ b/app/views/layouts/mailer.text.erb
@@ -2,5 +2,5 @@
 
 _________________________________________________________
 
-Chef - 1008 Western Ave #600 - Seattle, WA 98104
+Chef - 619 Western Ave. #400 - Seattle, WA 98104
 This email was sent to <%= @to %> by Chef Supermarket (<%= root_url %>).
