--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,7 +65,10 @@
         </div>
         <footer class="footer">
           &copy; 2008&thinsp;&ndash;&thinsp;<%= Time.new.year %> Chef Software, Inc. All Rights Reserved.
-          <br><br><%= link_to 'Code of Conduct', chef_docs_url('community_guidelines.html') %>
+          <br><br><%= link_to 'Code of Conduct', chef_docs_url('community_guidelines.html'), :class => 'footerlink' %>
+          <%= link_to 'Terms and Conditions of Use', chef_www_url('terms-of-service'), :class => 'footerlink' %>
+          <%= link_to 'Privacy Policy', chef_www_url('privacy-policy'), :class => 'footerlink' %>
+          <%= link_to 'Trademark Policy', chef_www_url('trademark-policy'), :class=> 'footerlink' %>
         </footer>
 
         <a class="exit-off-canvas"></a>
