adding call to new stylesheet to application stylesheet

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,6 +11,7 @@
 *
 *= require typography
 *= require appheader
+*= require appfooter
 *= require announcement_banner
 *= require_tree ./cookbooks
 *= require_tree ./profile
