moving footer link styling to structure stylesheet

--- a/app/assets/stylesheets/structure.scss
+++ b/app/assets/stylesheets/structure.scss
@@ -366,6 +366,10 @@ pre {
   font-size: rem-calc(11);
   padding: rem-calc(40);
   text-align: center;
+
+  a {
+    margin-right: rem-calc(25);
+  }
 }
 
 input.error, textarea.error {
