add route and controller action to see adoptable cookbooks

--- a/app/views/cookbooks/directory.html.erb
+++ b/app/views/cookbooks/directory.html.erb
@@ -80,6 +80,9 @@
       <code>knife cookbook site</code> commands. <%= link_to 'The documentation', chef_docs_url('knife_cookbook_site.html') %> for <code>knife cookbook site</code> explains how to
       download, share, unshare, search, install and list cookbooks on Supermarket.
       You can also interact with the <%= link_to 'Supermarket API', chef_docs_url('api_cookbooks_site.html') %> directly.</p>
+
+      <h3>How do I adopt a cookbook?</h3>
+      <p>This is the list of cookbooks available to adopt. <%= link_to 'Click here' %> to adopt one.</p>
     </div>
 
     <div class="learn_about_cookbooks_sidebar">
