add view for adoptable cookbooks and link to show page

--- a/app/views/cookbooks/directory.html.erb
+++ b/app/views/cookbooks/directory.html.erb
@@ -82,7 +82,7 @@
       You can also interact with the <%= link_to 'Supermarket API', chef_docs_url('api_cookbooks_site.html') %> directly.</p>
 
       <h3>How do I adopt a cookbook?</h3>
-      <p>This is the list of cookbooks available to adopt. <%= link_to 'Click here' %> to adopt one.</p>
+      <p><%= link_to 'Click here', available_for_adoption_path %> to view the list of adoptable cookbooks.</p>
     </div>
 
     <div class="learn_about_cookbooks_sidebar">
