rephrase 'click here', fix broken tests

--- a/app/views/cookbooks/available_for_adoption.html.erb
+++ b/app/views/cookbooks/available_for_adoption.html.erb
@@ -2,6 +2,7 @@
 <%= provide(:description, "Browse and search Chef cookbooks that are available for adoption.") %>
 
 <div class="page nobg">
+<h1>Cookbooks Available for Adoption</h1>
   <div class="heading-with-buttons">
     <h1 class="title">
       <%= pluralize(@number_of_available_cookbooks, 'Available Cookbook') %>
