--- a/app/views/cookbooks/directory.html.erb
+++ b/app/views/cookbooks/directory.html.erb
@@ -82,7 +82,8 @@
       You can also interact with the <%= link_to 'Supermarket API', chef_docs_url('api_cookbooks_site.html') %> directly.</p>
 
       <h3>How do I adopt a cookbook?</h3>
-      <p><%= link_to 'Click here', available_for_adoption_path %> to view the list of adoptable cookbooks.</p>
+      <!-- <p><%#= link_to 'Click here', available_for_adoption_path %> to view the list of adoptable cookbooks.</p> -->
+      <p>Select a cookbook from the <%= link_to 'list of adoptable cookbooks', available_for_adoption_path %> and click the "Adopt me!" button.</p>
     </div>
 
     <div class="learn_about_cookbooks_sidebar">
