--- a/app/views/application/_search.html.erb
+++ b/app/views/application/_search.html.erb
@@ -43,7 +43,7 @@
         </div>
 
         <div class= "advanced_textfield">
-          <%= search_field_tag 'platforms[]', nil, placeholder: "You can write platform name here, if it's not on the list!", class: 'platform_search_textfield' %>
+          <%= search_field_tag 'platforms[]', nil, placeholder: "You can write platform name here if it's not on the list", class: 'platform_search_textfield' %>
         </div>
       </div>
   <% end %>
