--- a/app/views/application/_search.html.erb
+++ b/app/views/application/_search.html.erb
@@ -24,7 +24,7 @@
         </div>
 
         <div class="advanced_search_toggle">
-          <span> Advanced Search </span>
+          <span>Advanced Options <i class="fa fa-chevron-down" id="toggle-arrow"></i><span>
         </div>
       </div>
 
