add zebra striping to adoption list
- Use CSS3 built-in method for selecting list pattern children
- Remove one level of `li` nesting

--- a/app/views/cookbooks/available_for_adoption.html.erb
+++ b/app/views/cookbooks/available_for_adoption.html.erb
@@ -14,7 +14,7 @@
 
   <ul class="simple_listing">
     <% @available_cookbooks.each do |cookbook| %>
-      <li><%= render "simple_cookbook", cookbook: cookbook %></li>
+      <%= render "simple_cookbook", cookbook: cookbook %>
     <% end %>
   </ul>
 </div>
