removing references to download count in UI

--- a/app/views/cookbooks/directory.html.erb
+++ b/app/views/cookbooks/directory.html.erb
@@ -8,7 +8,7 @@
 
   <ul class="cookbooks_columns <%= 'four_up' if @featured_cookbooks.any? %>">
     <% if @featured_cookbooks.any? %>
-      <li class="cookbooks_column last most-followed">
+      <li class="cookbooks_column first most-followed">
         <div class="cookbooks_column_content">
           <h2 class="title">Featured</h2>
           <ul class="simple_listing">
@@ -21,7 +21,7 @@
       </li>
     <% end %>
 
-    <li class="cookbooks_column first recently-updated">
+    <li class="cookbooks_column recently-updated">
       <div class="cookbooks_column_content">
         <h2 class="title">Recently Updated</h2>
         <ul class="simple_listing">
@@ -30,18 +30,6 @@
           <% end %>
         </ul>
         <%= link_to 'View All', cookbooks_path(order: 'recently_updated'), class: 'button radius expand' %>
-      </div>
-    </li>
-
-    <li class="cookbooks_column most-downloaded">
-      <div class="cookbooks_column_content">
-        <h2 class="title">Most Downloaded</h2>
-        <ul class="simple_listing">
-          <% @most_downloaded_cookbooks.each do |cookbook| %>
-            <%= render "simple_cookbook", cookbook: cookbook %>
-          <% end %>
-        </ul>
-        <%= link_to 'View All', cookbooks_path(order: 'most_downloaded'), class: 'button radius expand' %>
       </div>
     </li>
 
