adding in link to feedback.chef.io

--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -62,6 +62,10 @@
         <li>
           <a href="https://github.com/chef/supermarket" target="_blank">Contribute to Supermarket</a>
         </li>
+        <li>
+          <a href="https://feedback.chef.io" target="_blank">Share Your Ideas for Improving Chef</a>
+        </li>
+      </ul>
       </ul>
     </div>
   </section>
