including the adopting user's username along with email address in adoption interest emails

--- a/app/views/adoption_mailer/interest_email.html.erb
+++ b/app/views/adoption_mailer/interest_email.html.erb
@@ -1,1 +1,7 @@
-Your <%= @thing %>, <%= @name %>, which is currently up for adoption, got some interest today.  <%= mail_to @email %> is interested in adopting it. Please get in touch with them.
+Your <%= @thing %>, <%= @name %>, which is currently up for adoption, got some interest today.
+
+Here is the interested user's information:
+Supermarket Username: <%= @adopting_username %>
+Email Address: <%= mail_to @email %>
+
+Please get in touch with them.
