--- a/app/views/adoption_mailer/interest_email.text.erb
+++ b/app/views/adoption_mailer/interest_email.text.erb
@@ -1,1 +1,7 @@
-Your <%= @thing %>, <%= @name %>, which is currently up for adoption, got some interest today.  <%= @email %> is interested in adopting it. Please get in touch with them.
+Your <%= @thing %>, <%= @name %>, which is currently up for adoption, got some interest today.
+
+Here is the interested user's information:
+Supermarket Username: <%= @adopting_username %>
+Email Address: <%= @email %>
+
+Please get in touch with them.
